mods to meta data, slider

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
 
         <!-- Document title
         ============================================= -->
-        <title>South Burlington Dentist - General, Family, and Cosmetic Dentistry in South Burlington, VT by Drs. Matt and Kay Giulianelli</title>
+        <title>South Burlington Dentist - Implant Dentistry and Dentures in South Burlington, VT by Drs. Matt and Kay Giulianelli</title>
 
         <!-- Meta information
         ============================================= -->
         <meta name="author" content="Tyson Steele Associates" />
-        <meta name="keywords" content="burlington sedation dentist, burlington vermont sedation dentist, burlington vt sedation dentist, sedation dentistry, iv sedation, oral sedation, sleep dentistry, matt giulianelli, dr. matt giulianelli, kay giulianelli, dr. kay giulianelli, burlington sedation dentist, south burlington sedation dentist, s burlington sedation dentist, vermont sedation dentistry, vt sedation dentist, vt sedation dentistry" />
-        <meta name="description" content="Drs. Matt and Kay Giulianelli utilize oral and IV sedation dentistry to help people with dental anxiety or fear complete their appointments feeling comfortable and relaxed. Serving Burlington, South Burlington Vermont Communities" />
+        <meta name="keywords" content="burlington implant dentist, burlington vermont implant dentist, burlington vt implant dentist, implant dentistry, implants, burlington denture dentist, burlington vermont denture dentist, burlington vt denture dentist, dentures, matt giulianelli, dr. matt giulianelli, kay giulianelli, dr. kay giulianelli, south burlington implant dentist, s burlington implant dentist, vermont implant dentistry, vt implant dentist, vt implant dentistry, south burlington dentures, s burlington dentures, vermont dentures, vt dentures, vt denture" />
+        <meta name="description" content="Drs. Matt and Kay Giulianelli feature implant dentistry and dentures. Serving Burlington, South Burlington Vermont Communities" />
 
         <!-- Styles
         ============================================= -->
@@ -129,10 +129,10 @@
 
             <!-- Slider
             ============================================= -->
-            <section id="slider" class="slider-parallax hidden-xxs hidden-xs shadowed-edges" style="background: url('assets/images/tcw_slide.jpg'); background-size: cover;" data-height-lg="440" data-height-md="360" data-height-sm="300" data-height-xs="250" data-height-xxs="200">
+            <section id="slider" class="slider-parallax hidden-xxs hidden-xs shadowed-edges" style="background: url('assets/images/tcw-slide.jpg'); background-size: cover;" data-height-lg="440" data-height-md="360" data-height-sm="300" data-height-xs="250" data-height-xxs="200">
                 <div class="container clearfix">
                     <div class="vertical-middle center">
-                        <img src="assets/images/sedation-headline.png" class="pull-right" />
+                        <img src="assets/images/discover-implants.png" class="pull-right" />
                     </div>
                 </div>
             </section>
@@ -141,7 +141,7 @@
             <!-- Mobile Slide
             ============================================= -->
             <div id="mobile-slide" class="hidden-sm hidden-md hidden-lg clearfix shadowed-edges">
-                <img src="assets/images/mobile-slide_sedation-giulianelli.jpg" width="1140" class="img-responsive" alt="" />
+                <img src="assets/images/implants-mobile-slide.jpg" width="1140" class="img-responsive" alt="" />
             </div>
 
             <!-- Site Content
