started making small changes from other site

--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
                 </section>
 
         <script type="text/template" id="specials-template">
-            <h2>Limited Time <br class="hidden-sm hidden-md hidden-lg hidden-xl" /><%-  data.season %> Special<br /><span>Free Sedation Consultation</span></h2>
+            <h2>Limited Time <br class="hidden-sm hidden-md hidden-lg hidden-xl" /><%-  data.season %> Special<br /><span>Free Implant or Denture Consultation</span></h2>
             <h4>Limit <u>6</u> consultation slots available before <%= data.endMonth %> <%= data.endDay %>, <%= data.endYear %></h4>
         </script>
 
@@ -273,28 +273,9 @@
                 ============================================= -->
                 <section id="services" class="content-section clearfix page-section">
                     <div class="container clearfix">
-                        <div class="heading-block center noborder">
-                            <h2>Why Choose Sedation Dentistry?</h2>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <h3 class="nobottommargin"><i class="fa fa-ban"></i>&nbsp;&nbsp;Reduce Anxiety</h3>
-                                <p>Enjoy visiting the dentist again! Treatments seem to take only minutes to complete.</p>
-                            </div>
-                            <div class="col-sm-4">
-                                <h3 class="nobottommargin"><i class="fa fa-money"></i>&nbsp;&nbsp;Save Money</h3>
-                                <p>Longer single appointments  and decreased need for costly anesthesia saves you money.</p>
-                            </div>
-                            <div class="col-sm-4">
-                                <h3 class="nobottommargin"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Save Time</h3>
-                                <p>Many previously time-consuming procedures can now be completed in one appointment.</p>
-                            </div>
-                        </div>
-
-                        <hr />
 
                         <div class="heading-block center noborder">
-                            <h2>What is Sedation Dentistry?</h2>
+                            <h2>Benefits of Dental Implants</h2>
                         </div>
                         <div class="row">
                             <div class="col-sm-5 col-md-4">
@@ -304,12 +285,25 @@
                                 <br class="hidden-md hidden-lg hidden-xl" />
                             </div>
                             <div class="col-sm-7 col-md-8">
-                                <p>Drs. Matt and Kay Giulianelli are two of a limited number of general dentists that offer IV sedation and can complete most or all of your dentistry, including dental implants, while you are sedated.</p>
-                                <p><strong>Oral sedation</strong> dentistry is now the most common technique used in the United States to quell patient fears. It makes use of a prescription medication that induces a drowsy, relaxed feeling. We administer this medication orally (no needles!)</p>
-                                <p><strong>Intravenous or IV sedation</strong> is offered to the anxious, the fearful or the very young patient. It is a management technique that uses medications to assist the patient to cope with fear and anxiety. IV sedation is both safe and effective when administered by our trained professionals.</p>
-                                <p>Due to the relaxing effects of the medication, patients must have a friend or family member bring them to the dental office and return them home.</p>
+                                <p>A dental implant is an appliance used to replace the roots of teeth. The implant is surgically attached to the jaw bone and an artificial tooth is attached to the top of the implant, creating a natural looking, undetectable replacement for the missing tooth.
+                                </p>
+                                <p>Dental implants with artificial teeth are the closest thing to regrowing your natural teeth. They are strong, stable, durable and virtually undetectable. By filling gaps left by missing teeth, implants can provide better chewing ability and head off jaw joint problems.</p>
                             </div>
                         </div>
+<div class="text-center"> Add icons here</div>
+                        <hr />
+
+
+
+                        <div class="heading-block center noborder">
+                            <h2>Benefits of Dentures</h2>
+                        </div>
+                            <div class="col-sm-12">
+                                <p>In some cases, there may be inadequate bone to support a dental implant. In those cases, we recommend the use of our modern dentures. These natural-looking, functional, comfortable-to-wear dentures are not the dentures you remember from the past. Contact us about a free denture consultation today!
+                                </p>
+                            </div>
+
+
                     </div>
                 </section>
 
