--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <link rel="stylesheet" href="assets/css/champlainsmilesolutions.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css" />
 
-        <!-- Above the fold tyles
+        <!-- Above the fold styles
         ============================================= -->
         <style type="text/css">
         </style>
@@ -58,7 +58,7 @@
 
                         <!-- Top Bar Phone Number
                         ============================================= -->
-                        <p class="nomargin call-today">Call today! <a href="tel:+18027352769"><strong>(802) 735-2769</strong></a></p>
+                        <p class="nomargin call-today">Call today! <a href="tel:+18889734830"><strong>(888) 973-4830</strong></a></p>
 
                     </div>
                     <div class="col_half col_last fright nobottommargin">
@@ -171,7 +171,7 @@
                             </div>
                             <div class="clearfix">
                                 <div class="col_half tright call-today nobottommargin">
-                                    <a href="tel:+18889720561"><strong>(888) 972-0561</strong></a>
+                                    <a href="tel:+18889734830"><strong>(888) 973-4830</strong></a>
                                 </div>
                                 <div class="col_half tleft col_last nobottommargin">
                                     <a href="#" data-toggle="modal" data-target="#schedule-form" class="button button-rounded tright">Request Consultation</a>
@@ -185,28 +185,6 @@
             <h2>Limited Time <br class="hidden-sm hidden-md hidden-lg hidden-xl" /><%-  data.season %> Special<br /><span>Free Implant or Denture Consultation</span></h2>
             <h4>Limit <u>6</u> consultation slots available before <%= data.endMonth %> <%= data.endDay %>, <%= data.endYear %></h4>
         </script>
-
-
-
-                <!-- Special Offer
-                ============================================= -->
-<!--                 <section id="offer" class="content-section clearfix page-section">
-                    <div class="container clearfix">
-                        <div class="divcenter center clearfix" style="max-width: 900px;">
-                            <div class="offer-heading">
-                            </div>
-                            <div class="clearfix">
-                                <div class="col_half tright call-today nobottommargin">
-                                    <a href="tel:+18889213878"><strong>888-921-3878</strong></a>
-                                </div>
-                                <div class="col_half tleft col_last nobottommargin">
-                                    <a href="#" data-toggle="modal" data-target="#schedule-form" class="button button-rounded tright">Request Consultation</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section> -->
-
 
                 <!-- Reviews
                 ============================================= -->
@@ -233,6 +211,7 @@
                     <div class="container clearfix">
                         <div class="heading-block noborder center">
                             <h2>Join Our Membership Club</h2>
+                            <span style="color: #fff;">Drs. Matt and Kay Giulianelli have a plan just for you</span>
                         </div>
                         <div class="pricing-box pricing-extended bottommargin clearfix">
 
@@ -279,7 +258,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-5 col-md-4">
-                                <img src="assets/images/services/sedation-woman.jpg" class="img-responsive img-full-width" alt="" />
+                                <img src="assets/images/implants.jpg" class="img-responsive img-full-width" alt="" />
                                 <br class="hidden-xxs hidden-xs hidden-md hidden-lg hidden-xl" />
                                 <img src="assets/images/services/sedation-man.jpg" class="img-responsive img-full-width hidden-xxs hidden-xs hidden-md hidden-lg hidden-xl" alt="" />
                                 <br class="hidden-md hidden-lg hidden-xl" />
@@ -320,9 +299,7 @@
                                     <p><a href="https://www.google.com/maps/place/110+Kimball+Ave+%23230,+South+Burlington,+VT+05403/@44.4521335,-73.1509446,15.49z/data=!4m2!3m1!1s0x4cca797527df3a35:0xf9ff431dc1630712?hl=en-US" target="_blank"><u>Click for map &amp; directions</u></a>
                                 </address>
 
-                                <h3>New Patients Call:<br /><a href="tel:+18027352769">(802) 735-2769</a></h3>
-                                <p class="existing-patients nobottommargin">Existing Patients Call: <a href="tel:+18028646264">(802) 864-6264</a></p>
-                                <p>Fax: <strong>(802) 864-6402</strong></p>
+                                <h3><a href="tel:+18889734830">(888) 973-4830</a></h3>
                                 <a class="button btn-block button-small nomargin center" href="#" data-toggle="modal" data-target="#schedule-form">Request Appointment</a>
                             </div>
                         </div>
