--- a/public/index.html
+++ b/public/index.html
@@ -269,10 +269,41 @@
                                 <p>Dental implants with artificial teeth are the closest thing to regrowing your natural teeth. They are strong, stable, durable and virtually undetectable. By filling gaps left by missing teeth, implants can provide better chewing ability and head off jaw joint problems.</p>
                             </div>
                         </div>
-<div class="text-center"> Add icons here</div>
+                        
+                        <br>
+
+                    <div class="col_half text-center">
+                        <div class="feature-box fbox-small fbox-plain">
+                            <h3 style="padding-right: 35px"><i class="fa fa-leaf fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Natural</span></h3>
+                            <p>Restore lost teeth so they look, feel, fit and function naturally.</p>
+                        </div>
+                    </div>
+
+                    <div class="col_half col_last text-center">
+                        <div class="feature-box fbox-small fbox-plain">
+                            <h3 style="padding-right: 35px"><i class="fa fa-diamond fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Long Lasting</span></h3>
+                            <p>Dental implants are designed to last a lifetime.</p>
+                        </div>
+                    </div>
+
+                    <div class="clear"></div>
+
+                    <div class="col_half text-center">
+                        <div class="feature-box fbox-small fbox-plain">
+                            <h3 style="padding-right: 35px"><i class="fa fa-child fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Lifestyle</span></h3>
+                            <p>Enjoy food, sports, and laughter like you used to.</p>
+                        </div>
+                    </div>
+
+                    <div class="col_half col_last text-center">
+                        <div class="feature-box fbox-small fbox-plain">
+                            <h3 style="padding-right: 35px"><i class="fa fa-lock fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Permanent</span></h3>
+                            <p>Replacement teeth won’t move, click, or shift.</p>
+                        </div>
+                    </div>
+
+                    <div class="clear"></div>
                         <hr />
-
-
 
                         <div class="heading-block center noborder">
                             <h2>Benefits of Dentures</h2>
