--- a/public/index.html
+++ b/public/index.html
@@ -274,14 +274,14 @@
 
                     <div class="col_half text-center">
                         <div class="feature-box fbox-small fbox-plain">
-                            <h3 style="padding-right: 35px"><i class="fa fa-leaf fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Natural</span></h3>
+                            <h3 style="padding-right: 35px"><i class="fa fa-leaf fa-2x" style="color: #0164a5"></i> &nbsp;<span class="benefit-icons">Natural</span></h3>
                             <p>Restore lost teeth so they look, feel, fit and function naturally.</p>
                         </div>
                     </div>
 
                     <div class="col_half col_last text-center">
                         <div class="feature-box fbox-small fbox-plain">
-                            <h3 style="padding-right: 35px"><i class="fa fa-diamond fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Long Lasting</span></h3>
+                            <h3 style="padding-right: 35px"><i class="fa fa-diamond fa-2x" style="color: #0164a5"></i> &nbsp;<span class="benefit-icons">Long Lasting</span></h3>
                             <p>Dental implants are designed to last a lifetime.</p>
                         </div>
                     </div>
@@ -290,14 +290,14 @@
 
                     <div class="col_half text-center">
                         <div class="feature-box fbox-small fbox-plain">
-                            <h3 style="padding-right: 35px"><i class="fa fa-child fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Lifestyle</span></h3>
+                            <h3 style="padding-right: 35px"><i class="fa fa-child fa-2x" style="color: #0164a5"></i> &nbsp;<span class="benefit-icons">Lifestyle</span></h3>
                             <p>Enjoy food, sports, and laughter like you used to.</p>
                         </div>
                     </div>
 
                     <div class="col_half col_last text-center">
                         <div class="feature-box fbox-small fbox-plain">
-                            <h3 style="padding-right: 35px"><i class="fa fa-lock fa-2x" style="color: #a4a646"></i> &nbsp;<span class="benefit-icons">Permanent</span></h3>
+                            <h3 style="padding-right: 35px"><i class="fa fa-lock fa-2x" style="color: #0164a5"></i> &nbsp;<span class="benefit-icons">Permanent</span></h3>
                             <p>Replacement teeth won’t move, click, or shift.</p>
                         </div>
                     </div>
