--- a/public/index.html
+++ b/public/index.html
@@ -50,29 +50,6 @@
         ============================================= -->
         <div id="wrapper" class="clearfix">
 
-            <!-- Top Bar
-            ============================================= -->
-            <div id="top-bar" class="hidden-xs">
-                <div class="container clearfix">
-                    <div class="col_half nobottommargin">
-
-                        <!-- Top Bar Phone Number
-                        ============================================= -->
-                        <p class="nomargin call-today">Call today! <a href="tel:+18889734830"><strong>(888) 973-4830</strong></a></p>
-
-                    </div>
-                    <div class="col_half col_last fright nobottommargin">
-
-                        <!-- Top Bar Schedule Button
-                        ============================================= -->
-                        <a class="button button-small button-rounded center" data-toggle="modal" data-target="#schedule-form">Request Consultation</a>
-
-                    </div>
-                </div>
-            </div>
-
-
-
             <!-- Header
             ============================================= -->
             <header id="header" class="full-header static-sticky shadowed-edges">
@@ -84,10 +61,10 @@
                         ============================================= -->
                         <div id="logo" class="one-page-menu">
                             <a href="#" data-href="#home" class="standard-logo" data-offset="100">
-                                <img src="assets/images/giulianelli-logo.svg" alt="Champlain Smile Solutions Logo" />
+                                <img src="assets/images/logo-footer.svg" alt="Champlain Smile Solutions Logo" />
                             </a>
                             <a href="#" data-href="#home" class="retina-logo" data-offset="100">
-                                <img src="assets/images/giulianelli-logo.svg" alt="Champlain Smile Solutions Logo" />
+                                <img src="assets/images/logo-footer.svg" alt="Champlain Smile Solutions Logo" />
                             </a>
                         </div>
 
@@ -99,7 +76,7 @@
                                 <li><a href="#" data-href="#offer" data-offset="100"><div>Special Offer</div></a></li>
                                 <li><a href="#" data-href="#reviews" data-offset="100"><div>Reviews</div></a></li>
                                 <li><a href="#" data-href="#members" data-offset="100"><div>Membership</div></a></li>
-                                <li><a href="#" data-href="#services" data-offset="100"><div>Sedation Services</div></a></li>
+                                <li><a href="#" data-href="#services" data-offset="100"><div>Services</div></a></li>
                                 <li><a href="#" data-href="#location" data-offset="100"><div>Location</div></a></li>
                             </ul>
 
@@ -118,6 +95,12 @@
                                     ============================================= -->
                                     <a href="https://plus.google.com/110521976902427320996/about" target="_blank" class="nobottommargin" style="margin-right: 10px;">
                                         <img src="assets/images/social/google.png" alt="" />
+                                    </a>
+
+                                    <!-- Yelp
+                                    ============================================= -->
+                                    <a href="http://www.yelp.com/biz/champlain-smile-solutions-south-burlington" target="_blank" class="nobottommargin" style="margin-right: 10px;">
+                                        <img src="assets/images/yelp.png" alt="" />
                                     </a>
 
                                 </div>
@@ -185,6 +168,20 @@
             <h2>Limited Time <br class="hidden-sm hidden-md hidden-lg hidden-xl" /><%-  data.season %> Special<br /><span>Free Implant or Denture Consultation</span></h2>
             <h4>Limit <u>6</u> consultation slots available before <%= data.endMonth %> <%= data.endDay %>, <%= data.endYear %></h4>
         </script>
+
+                <!-- Doctor Quote (mobile version)
+                ============================================= -->
+                <section id="quote" class="content-section clearfix page-section visible-xs visible-xxs">
+                    <div class="container clearfix">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <blockquote>
+                                    <p>&rdquo;We've been fortunate to help hundreds of patients transform their smiles and their lives. We'd be honored if you stopped by for a free consultation, giving us an opportunity to earn your trust.&ldquo; – <em>Drs. Matt &amp; Kay Giulianelli</em></p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!-- Reviews
                 ============================================= -->
@@ -260,7 +257,7 @@
                             <div class="col-sm-5 col-md-4">
                                 <img src="assets/images/implants.jpg" class="img-responsive img-full-width" alt="" />
                                 <br class="hidden-xxs hidden-xs hidden-md hidden-lg hidden-xl" />
-                                <img src="assets/images/services/sedation-man.jpg" class="img-responsive img-full-width hidden-xxs hidden-xs hidden-md hidden-lg hidden-xl" alt="" />
+                                <img src="assets/images/services/implants-image-two.jpg" class="img-responsive img-full-width hidden-xxs hidden-xs hidden-md hidden-lg hidden-xl" alt="" />
                                 <br class="hidden-md hidden-lg hidden-xl" />
                             </div>
                             <div class="col-sm-7 col-md-8">
@@ -317,29 +314,51 @@
                     </div>
                 </section>
 
-                <!-- Location
-                ============================================= -->
-                <div id="location" class="page-section shadowed-edges">
-                    <div id="map-overlay">
-                        <div class="container clearfix">
-                            <div id="contact-form-overlay-mini" class="clearfix">
-                                <img src="assets/images/logo-footer.svg" alt="" class="img-responsive" />
-                                <address>
-                                    <p><strong>Matt Giulianelli, DMD, FAGD, FICOI<br />Kay Giulianelli, DMD, FICOI</strong></p>
-                                    <p class="nobottommargin">110 Kimball Ave, Suite 230<br />South Burlington, VT 05403</p>
-                                    <p><a href="https://www.google.com/maps/place/110+Kimball+Ave+%23230,+South+Burlington,+VT+05403/@44.4521335,-73.1509446,15.49z/data=!4m2!3m1!1s0x4cca797527df3a35:0xf9ff431dc1630712?hl=en-US" target="_blank"><u>Click for map &amp; directions</u></a>
-                                </address>
+                <!-- CONTACT SECTION -->
+            <!-- Contact info that will show up in mobile version (above map)-->
+            <section id="location" class="page-section shadowed-edges">
+               <div class="container clearfix visible-sm visible-xs">
+                    <div id="contact-form-overlay-mini" class="clearfix">
+                        <img src="assets/images/logo-footer.svg" alt="" class="img-responsive" />
+                        <address>
+                            <p><strong>Matt Giulianelli, DMD, FAGD, FICOI<br />Kay Giulianelli, DMD, FICOI</strong></p>
+                            <p class="nobottommargin">110 Kimball Ave, Suite 230<br />South Burlington, VT 05403</p>
+                            <p><a href="https://www.google.com/maps/place/110+Kimball+Ave+%23230,+South+Burlington,+VT+05403/@44.4521335,-73.1509446,15.49z/data=!4m2!3m1!1s0x4cca797527df3a35:0xf9ff431dc1630712?hl=en-US" target="_blank"><u>Click for map &amp; directions</u></a>
+                        </address>
 
-                                <h3><a href="tel:+18889734830">(888) 973-4830</a></h3>
-                                <a class="button btn-block button-small nomargin center" href="#" data-toggle="modal" data-target="#schedule-form">Request Appointment</a>
-                            </div>
-                        </div>
-                        <div id="google-map" class="gmap">
-                        </div>
+                        <h3><a href="tel:+18889720561">(888) 972-0561</a></h3>
+                        <a class="button btn-block button-small nomargin center" href="#" data-toggle="modal" data-target="#schedule-form">Request Appointment</a>
                     </div>
                 </div>
-            </section>
 
+                <!-- Contact Form & Map Overlay Section
+                ============================================= -->
+                <section id="map-overlay">
+
+                    <!-- Contact Form Overlay (desktop)
+                    ============================================= -->
+                <div class="container clearfix">
+                    <div id="contact-form-overlay-mini" class="clearfix hidden-sm hidden-xs">
+                        <img src="assets/images/logo-footer.svg" alt="" class="img-responsive" />
+                        <address>
+                            <p><strong>Matt Giulianelli, DMD, FAGD, FICOI<br />Kay Giulianelli, DMD, FICOI</strong></p>
+                            <p class="nobottommargin">110 Kimball Ave, Suite 230<br />South Burlington, VT 05403</p>
+                            <p><a href="https://www.google.com/maps/place/110+Kimball+Ave+%23230,+South+Burlington,+VT+05403/@44.4521335,-73.1509446,15.49z/data=!4m2!3m1!1s0x4cca797527df3a35:0xf9ff431dc1630712?hl=en-US" target="_blank"><u>Click for map &amp; directions</u></a>
+                        </address>
+
+                        <h3><a href="tel:+18889720561">(888) 972-0561</a></h3>
+                        <a class="button btn-block button-small nomargin center" href="#" data-toggle="modal" data-target="#schedule-form">Request Appointment</a>
+                    </div>
+                </div><!-- Desktop Contact Form Overlay End -->
+
+                <!-- Google Map
+                ============================================= -->
+                <div class="map">
+                    <section id="google-map" class="gmap"></section>
+                </div>
+                <!-- Google Map End -->
+                </section><!-- Contact Form & Map Overlay Section End -->
+            </section>
             <!-- Footer
             ============================================= -->
             <footer id="footer" class="clearfix">
@@ -366,7 +385,7 @@
                 <div id="copyrights">
                     <div class="container clearfix">
                         <div class="col_two_third">
-                            <p class="nobottommargin">Copyright &copy; <script>document.write(+new Date().getFullYear());</script> All Rights Reserved by <a href="http://www.tysonsteele.com" target="_blank" style="color: #bbb;">Tyson Steele Associates</a>.</p>
+                            <p class="nobottommargin">Copyright &copy; <script>document.write(+new Date().getFullYear());</script> All Rights Reserved by <a href="http://www.tysonsteele.com" target="_blank" style="color: #fff;">Tyson Steele Associates</a>.</p>
                         </div>
                         <div class="col_one_third col_last tright">
 
@@ -380,6 +399,12 @@
                             ============================================= -->
                             <a href="https://plus.google.com/110521976902427320996/about" target="_blank" class="nobottommargin" style="margin-right: 10px;">
                                 <img src="assets/images/social/google.png" alt="" />
+                            </a>
+
+                            <!-- Yelp
+                            ============================================= -->
+                            <a href="http://www.yelp.com/biz/champlain-smile-solutions-south-burlington" target="_blank" class="nobottommargin" style="margin-right: 10px;">
+                                <img src="assets/images/yelp.png" alt="" />
                             </a>
 
                         </div>
