fixed line breaks

--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
 
         <script type="text/template" id="specials-template">
             <h2>Limited Time <br class="hidden-sm hidden-md hidden-lg hidden-xl" /><%-  data.season %> Special<br /><span>Free Implant or Denture Consultation</span></h2>
-            <h4>Limit <u>6</u> consultation slots available before <%= data.endMonth %> <%= data.endDay %>, <%= data.endYear %></h4>
+            <h4>Limit <u>6</u> consultation slots available before<span style="display: block; color: #222222 !important"> <%= data.endMonth %> <%= data.endDay %>, <%= data.endYear %></span></h4>
         </script>
 
                 <!-- Doctor Quote (mobile version)
@@ -176,7 +176,7 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <blockquote>
-                                    <p>&rdquo;We've been fortunate to help hundreds of patients transform their smiles and their lives. We'd be honored if you stopped by for a free consultation, giving us an opportunity to earn your trust.&ldquo; – <em>Drs. Matt &amp; Kay Giulianelli</em></p>
+                                    <p>&rdquo;We've been fortunate to help hundreds of patients transform their smiles and their lives. We'd be honored if you stopped by for a free consultation, giving us an opportunity to earn your trust.&ldquo;<span style="display: block"><em>- Drs. Matt &amp; Kay Giulianelli</em></span></p>
                                 </blockquote>
                             </div>
                         </div>
