cleaned up code/ran through html validator

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
             <section id="slider" class="slider-parallax hidden-xxs hidden-xs shadowed-edges" style="background: url('assets/images/tcw-slide.jpg'); background-size: cover;" data-height-lg="440" data-height-md="360" data-height-sm="300" data-height-xs="250" data-height-xxs="200">
                 <div class="container clearfix">
                     <div class="vertical-middle center">
-                        <img src="assets/images/discover-implants.png" class="pull-right" />
+                        <img src="assets/images/discover-implants.png" alt="implants image" class="pull-right" />
                     </div>
                 </div>
             </section>
@@ -171,7 +171,7 @@
 
                 <!-- Doctor Quote (mobile version)
                 ============================================= -->
-                <section id="quote" class="content-section clearfix page-section visible-xs visible-xxs">
+                <section id="mobile-quote" class="content-section clearfix page-section visible-xs visible-xxs">
                     <div class="container clearfix">
                         <div class="row">
                             <div class="col-xs-12">
@@ -181,6 +181,8 @@
                             </div>
                         </div>
                     </div>
+                </section>
+
                 </section>
 
                 <!-- Reviews
@@ -318,7 +320,7 @@
             <!-- Contact info that will show up in mobile version (above map)-->
             <section id="location" class="page-section shadowed-edges">
                <div class="container clearfix visible-sm visible-xs">
-                    <div id="contact-form-overlay-mini" class="clearfix">
+                    <div id="contact-form-overlay-mini-mobile" class="clearfix">
                         <img src="assets/images/logo-footer.svg" alt="" class="img-responsive" />
                         <address>
                             <p><strong>Matt Giulianelli, DMD, FAGD, FICOI<br />Kay Giulianelli, DMD, FICOI</strong></p>
@@ -472,6 +474,10 @@
             </div>
         </div>
 
+        <!-- Go To Top
+        ============================================= -->
+        <div id="gotoTop" class="icon-angle-up"></div>
+
         <!-- Canvas scripts
         ============================================= -->
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
@@ -559,7 +565,6 @@
 
 
 
-        <!-- Analytics
         <script type="text/javascript">
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
